:recycle: [#106] union fix
